# pysequence

./: LICENSE  README.md  pyproject.toml
.github/workflows/: basic.yml  python-package.yml  workflow_01.yml  workflow_02.yml  workflow_03.yml
pysequence/: __init__.py  sequences.py  test_compare_sequences.py
pysequence/analysis/: __init__.py  compare_sequences.py
test/: test_compare_sequences.py
